crates/keron-lang/tests/corpus/errors/parse/match_arm_missing_arrow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '1' expected something else, '#', or '='
  --> 2:5
  |
2 |   1 1,
  |     ^
